--- a/src/app/components/video-call/video-call.component.html
+++ b/src/app/components/video-call/video-call.component.html
@@ -20,7 +20,8 @@
             <div>
                 <div class="parent-div">
                     <div class="background-div bg-dark">
-                        <video #remoteVideo autoplay playsinline [hidden]="!mIsRemoteUserVideoOn"></video>
+                        <video #remoteVideo autoplay playsinline [hidden]="!mIsRemoteUserVideoOn"
+                            [muted]="isMuted"></video>
                         <button class="mic-button mic-button1" *ngIf="mIsRemoteUserMuted">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-mic-mute" viewBox="0 0 16 16">
@@ -41,7 +42,7 @@
 
 
                     <div class="overlay-div">
-                        <video #localVideo autoplay playsinline muted></video>
+                        <video #localVideo autoplay playsinline [muted]="true"></video>
                     </div>
                 </div>
 
@@ -90,16 +91,39 @@
                 </div>
 
             </div>
-                <div class="chat">
+            <div class="chat">
+                <div class="input-group mb-3">
+                    <div>
+                        <span>
+                            Please Share Below ID With Other user to start call.
+                        </span>
+                    </div>
+                    <div class="d-flex">
+                        <input type="text" class="form-control" placeholder="Call ID" readonly [(ngModel)]="roomId">
+                        <button (click)="copyText()" value="click to copy" class="btn btn-outline-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-copy" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <div>
+
                     <h3>Chat</h3>
+
+
                     <input type="text" placeholder="Type a message" [(ngModel)]="chatMessage"
                         (keyup.enter)="sendMessage()" />
-                    <button (click)="sendMessage()">Send</button>
+                    <button (click)="sendMessage()" class="btn btn-outline-primary">Send Msg</button>
                     <div class="messages">
                         <p *ngFor="let msg of chatMessages">{{ msg }}</p>
                     </div>
                 </div>
-                
+            </div>
+
         </div>
     </div>
 
