--- a/src/app/components/video-call/video-call.component.html
+++ b/src/app/components/video-call/video-call.component.html
@@ -42,7 +42,7 @@
 
 
                     <div class="overlay-div">
-                        <video #localVideo autoplay playsinline [muted]="true"></video>
+                        <video #localVideo autoplay playsinline></video>
                     </div>
                 </div>
 
