--- a/src/app/components/video-call/video-call.component.html
+++ b/src/app/components/video-call/video-call.component.html
@@ -1,130 +1,78 @@
 <div class="container">
     <div *ngIf="!roomId">
-
         <div class="room-options">
-            <div>
-                <button class="btn btn-primary btn-lg mb-3" id="newCallButton" (click)="mCreateNewCall()">Create New
-                    Call</button>
-            </div>
+            <button class="btn btn-primary btn-lg mb-3" id="newCallButton" (click)="mCreateNewCall()">
+                Create New Call
+            </button>
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Enter Call Id" id="callIDInput"
-                    [(ngModel)]="joinRoomId">
-                <button class="btn btn-success" type="button" id="enterCallButton"
-                    (click)="startLocalVideo(); joinRoom(joinRoomId)">Join Call</button>
+                <input type="text" class="form-control" placeholder="Enter Call Id" [(ngModel)]="joinRoomId">
+                <button class="btn btn-success" type="button" (click)="startLocalVideo(); joinRoom(joinRoomId)">
+                    Join Call
+                </button>
             </div>
         </div>
     </div>
+
     <div *ngIf="roomId">
-        <div class="d-flex">
-            {{roomId}}
-            <div>
-                <div class="parent-div">
-                    <div class="background-div bg-dark">
-                        <video #remoteVideo autoplay playsinline [hidden]="!mIsRemoteUserVideoOn"
-                            [muted]="isMuted" [volume]="mIsRemoteUserMuted?0:1"></video>
-                        <button class="mic-button mic-button1" *ngIf="mIsRemoteUserMuted">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-mic-mute" viewBox="0 0 16 16">
-                                <path
-                                    d="M13 8c0 .564-.094 1.107-.266 1.613l-.814-.814A4 4 0 0 0 12 8V7a.5.5 0 0 1 1 0zm-5 4c.818 0 1.578-.245 2.212-.667l.718.719a5 5 0 0 1-2.43.923V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 1 0v1a4 4 0 0 0 4 4m3-9v4.879l-1-1V3a2 2 0 0 0-3.997-.118l-.845-.845A3.001 3.001 0 0 1 11 3" />
-                                <path
-                                    d="m9.486 10.607-.748-.748A2 2 0 0 1 6 8v-.878l-1-1V8a3 3 0 0 0 4.486 2.607m-7.84-9.253 12 12 .708-.708-12-12z" />
-                            </svg>
-                        </button>
-                        <button class="mic-button mic-button2" *ngIf="!mIsRemoteUserVideoOn">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-camera-video-off" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M10.961 12.365a2 2 0 0 0 .522-1.103l3.11 1.382A1 1 0 0 0 16 11.731V4.269a1 1 0 0 0-1.406-.913l-3.111 1.382A2 2 0 0 0 9.5 3H4.272l.714 1H9.5a1 1 0 0 1 1 1v6a1 1 0 0 1-.144.518zM1.428 4.18A1 1 0 0 0 1 5v6a1 1 0 0 0 1 1h5.014l.714 1H2a2 2 0 0 1-2-2V5c0-.675.334-1.272.847-1.634zM15 11.73l-3.5-1.555v-4.35L15 4.269zm-4.407 3.56-10-14 .814-.58 10 14z" />
-                            </svg>
-                        </button>
-                    </div>
-
-
-                    <div class="overlay-div">
-                        <video #localVideo autoplay playsinline></video>
-                    </div>
-                </div>
-
-
-                <div *ngIf="roomId">
-                    <button (click)="toggleMute()" class="btn btn-outline-primary">
-                        <span *ngIf="isMuted===true">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-mic-mute" viewBox="0 0 16 16">
-                                <path
-                                    d="M13 8c0 .564-.094 1.107-.266 1.613l-.814-.814A4 4 0 0 0 12 8V7a.5.5 0 0 1 1 0zm-5 4c.818 0 1.578-.245 2.212-.667l.718.719a5 5 0 0 1-2.43.923V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 1 0v1a4 4 0 0 0 4 4m3-9v4.879l-1-1V3a2 2 0 0 0-3.997-.118l-.845-.845A3.001 3.001 0 0 1 11 3" />
-                                <path
-                                    d="m9.486 10.607-.748-.748A2 2 0 0 1 6 8v-.878l-1-1V8a3 3 0 0 0 4.486 2.607m-7.84-9.253 12 12 .708-.708-12-12z" />
-                            </svg>
-                        </span>
-
-                        <span *ngIf="isMuted===false">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-mic" viewBox="0 0 16 16">
-                                <path
-                                    d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5" />
-                                <path
-                                    d="M10 8a2 2 0 1 1-4 0V3a2 2 0 1 1 4 0zM8 0a3 3 0 0 0-3 3v5a3 3 0 0 0 6 0V3a3 3 0 0 0-3-3" />
-                            </svg>
-                        </span>
-                    </button>
-
-                    <button (click)="toggleVideo()" class="btn btn-outline-primary">
-                        <span *ngIf="isVideoEnabled===true">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-camera-video" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462a1 1 0 0 1-1.406.913l-3.111-1.382A2 2 0 0 1 9.5 13H2a2 2 0 0 1-2-2zm11.5 5.175 3.5 1.556V4.269l-3.5 1.556zM2 4a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h7.5a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1z" />
-                            </svg>
-                        </span>
-
-                        <span *ngIf="isVideoEnabled===false">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-camera-video-off" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M10.961 12.365a2 2 0 0 0 .522-1.103l3.11 1.382A1 1 0 0 0 16 11.731V4.269a1 1 0 0 0-1.406-.913l-3.111 1.382A2 2 0 0 0 9.5 3H4.272l.714 1H9.5a1 1 0 0 1 1 1v6a1 1 0 0 1-.144.518zM1.428 4.18A1 1 0 0 0 1 5v6a1 1 0 0 0 1 1h5.014l.714 1H2a2 2 0 0 1-2-2V5c0-.675.334-1.272.847-1.634zM15 11.73l-3.5-1.555v-4.35L15 4.269zm-4.407 3.56-10-14 .814-.58 10 14z" />
-                            </svg>
-                        </span>
-
+        <div class="d-flex flex-column">
+            <div class="parent-div">
+                <div class="background-div bg-dark">
+                    <video #remoteVideo autoplay playsinline [volume]="mIsRemoteUserMuted ? 0 : 1"></video>
+                    <button class="mic-button" *ngIf="mIsRemoteUserMuted">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-mic-mute" viewBox="0 0 16 16">
+                            <path d="M9.486 10.607l-.748-.748A2 2 0 0 1 6 8v-1.878l-1-1V8a3 3 0 0 0 4.486 2.607"></path>
+                            <path d="m1.086 1.27 12 12-.708.708-12-12z"></path>
+                        </svg>
                     </button>
                 </div>
-
+                <div class="overlay-div">
+                    <video #localVideo autoplay playsinline></video>
+                </div>
             </div>
+
+            <div class="controls">
+                <button (click)="toggleMute()" class="btn btn-outline-primary">
+                    <span *ngIf="isMuted; else unmuteIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-mic-mute" viewBox="0 0 16 16">
+                            <path d="M13 8c0 .564-.094 1.107-.266 1.613l-.814-.814A4 4 0 0 0 12 8V7a.5.5 0 0 1 1 0z"></path>
+                            <path d="m1.086 1.27 12 12-.708.708-12-12z"></path>
+                        </svg>
+                    </span>
+                    <ng-template #unmuteIcon>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-mic" viewBox="0 0 16 16">
+                            <path d="M8 0a3 3 0 0 0-3 3v5a3 3 0 0 0 6 0V3a3 3 0 0 0-3-3z"></path>
+                        </svg>
+                    </ng-template>
+                </button>
+
+                <button (click)="toggleVideo()" class="btn btn-outline-primary">
+                    <span *ngIf="isVideoEnabled; else videoOffIcon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-camera-video" viewBox="0 0 16 16">
+                            <path d="M0 5a2 2 0 0 1 2-2h7.5a2 2 0 0 1 1.983 1.738l3.11-1.382A1 1 0 0 1 16 4.269v7.462"></path>
+                        </svg>
+                    </span>
+                    <ng-template #videoOffIcon>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-camera-video-off" viewBox="0 0 16 16">
+                            <path d="M1.428 4.18A1 1 0 0 0 1 5v6a1 1 0 0 0 1 1h5.014"></path>
+                        </svg>
+                    </ng-template>
+                </button>
+            </div>
+
             <div class="chat">
-                <div class="input-group mb-3">
-                    <div>
-                        <span>
-                            Please Share Below ID With Other user to start call.
-                        </span>
-                    </div>
-                    <div class="d-flex">
-                        <input type="text" class="form-control" placeholder="Call ID" readonly [(ngModel)]="roomId">
-                        <button (click)="copyText()" value="click to copy" class="btn btn-outline-primary">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-copy" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z" />
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-
-                <div>
-
-                    <h3>Chat</h3>
-
-
-                    <input type="text" placeholder="Type a message" [(ngModel)]="chatMessage"
-                        (keyup.enter)="sendMessage()" />
-                    <button (click)="sendMessage()" class="btn btn-outline-primary">Send Msg</button>
-                    <div class="messages">
-                        <p *ngFor="let msg of chatMessages">{{ msg }}</p>
-                    </div>
+                <h3>Chat</h3>
+                <input type="text" placeholder="Type a message" [(ngModel)]="chatMessage"
+                    (keyup.enter)="sendMessage()" />
+                <button (click)="sendMessage()" class="btn btn-outline-primary">Send</button>
+                <div class="messages">
+                    <p *ngFor="let msg of chatMessages">{{ msg }}</p>
                 </div>
             </div>
-
         </div>
     </div>
-
 </div>
