--- a/src/app/components/video-call/video-call.component.html
+++ b/src/app/components/video-call/video-call.component.html
@@ -16,7 +16,7 @@
     </div>
     <div *ngIf="roomId">
         <div class="d-flex">
-            {{roomId}}
+<!--             {{roomId}} -->
             <div>
                 <div class="parent-div">
                     <div class="background-div bg-dark">
